# LanFlux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
crates/client/: Cargo.toml
crates/client/src/: cli.rs  client_mode.rs  config.rs  connection.rs  diagnostic.rs  display.rs  lib.rs  main.rs  operator_mode.rs  scanner.rs  server_mode.rs  tunnel_client.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  config.rs  error.rs  lib.rs  models.rs
crates/network/: Cargo.toml
crates/network/src/: ip.rs  lib.rs  nat.rs  packet.rs  route.rs  tun.rs  tunnel.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  main.rs  routes.rs  state.rs  tunnel.rs
crates/server/src/handlers/: dashboard.rs  mod.rs  node.rs  policy.rs  pool.rs  segment.rs  session.rs  tunnel.rs
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.vue  api.js  router.js  style.css  tauri.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: client_manager.rs  commands.rs  main.rs
desktop/src/components/: ConnectionBar.vue  StatusBadge.vue  ToastContainer.vue
desktop/src/composables/: useToast.js
desktop/src/views/: ClientHome.vue  ClientSegments.vue  ClientStatus.vue  ModeSelect.vue  OperatorHome.vue  OperatorSegments.vue  OperatorTest.vue  ServerStatus.vue
docker/: entrypoint.sh
docs/: 功能预期.md  实施计划.md  界面设计.md
scripts/: build.sh  install.sh
web-admin/: index.html  package-lock.json  package.json  vite.config.js
web-admin/src/: App.vue  api.js  router.js  style.css
web-admin/src/components/: ConfirmDialog.vue  StatusBadge.vue
web-admin/src/views/: Dashboard.vue  LogList.vue  MappingList.vue  NodeDetail.vue  NodeList.vue  PolicyList.vue  PoolConfig.vue  SegmentList.vue  SessionList.vue
