[package]
name = "net-tool-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "net-tool"
path = "src/main.rs"

[dependencies]
net-tool-common.workspace = true
net-tool-network.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
clap = { workspace = true, features = ["env"] }
toml.workspace = true
bytes.workspace = true
