[package]
name = "net-tool-desktop"
version = "0.1.0"
edition = "2021"
description = "NetTool 组网工具桌面客户端"
license = "LGPL-3.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
net-tool-common = { path = "../../crates/common" }
net-tool-network = { path = "../../crates/network" }

[features]
# 此 feature 用于生产构建时启用 custom-protocol
custom-protocol = ["tauri/custom-protocol"]
